--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
 </head>
 <body>
     <h1>
+        <div style="text-align: center;">
         Welcome to my Home Page
+        </div>
     </h1>
     <p>
+        <div style="text-align: center;">
         Go to <a href="speaker-submission.html">Speaker Submission</a>
+        </div>
     </p>
     
 </body>
